--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="medium">Medium</string>
     <string name="hard">Hard</string>
     <string name="close">Close</string>
+    <string name="custom">Custom</string>
+    <string name="set_custom_timer">Set Custom Timer</string>
     <string name="egg_ready">Your egg is ready.</string>
 </resources>
